--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,13 @@
+/* Disable user select and drag capabilities */
+:not(input):not(textarea):not(pre):not(code):not(.selectable),
+:not(input):not(textarea):not(pre):not(code):not(.selectable)::after,
+:not(input):not(textarea):not(pre):not(code):not(.selectable)::before
+{
+    -webkit-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
+}
+
 #blazor-error-ui {
     background: lightyellow;
     bottom: 0;
